# react-fastapi

./: pyproject.toml
backend/: .env
backend/src/: config.py  http_client.py  init.py  main.py  router.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: CryptocurrencyCard.jsx
