[tool.poetry]
name = "fastapi-react"
version = "0.1.0"
description = ""
authors = ["evgenickus <evgenickus@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.5"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
